Wed Jun 11 22:28:38 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basicb): Also remove CVSROOT/Emptydir at end of
	test.  Otherwise it affects the toplevel-9 test for remote.

Tue Jun 10 14:03:32 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (toplevel): Change "update" and "checkout" to "[a-z]*"
	as these read "server" instead for "make remotecheck".  Change
	expect strings for toplevel-9 to accept the behavior of remote CVS
	(see comments for more discussion).

	* sanity.sh: New tests stamps-9 through stamps-11 test timestamp
	behavior on cvs update.

Mon Jun  9 22:42:50 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Remove "#! /bin/zsh" line at end.  I assume it was
	added accidentally.

Tue Jun 10 03:08:46 1997  Norbert Kiesel  <nk@psycho.de>

	* sanity.sh: new tests "toplevel" for the new toplevel CVS
	directory creation (including one test which shows an error in
	this area).

Sun Jun  8 20:52:00 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (getrcsrev): Before printing error, check whether it was
	feof or ferror.

	* rcs.h, import.c (add_rcs_file): No longer static.  New arguments
	add_vbranch, add_vhead, and add_logfp replace access to static
	variables vbranch, vhead, and logfp.
	* mkmodules.c: Call it instead of RCS_CI.
	* import.c (process_import_file): Adjust call to add_rcs_file.

Tue Jun  3 10:18:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basicb): Match "." with "\." not ".".

Tue Jun  3 13:02:37 1997  Norbert Kiesel  <nk@cosa.de>

	* checkout.c (checkout): Removed restriction of not sending -k in
 	remote export (I think this was introduced while the -k handling
 	was still broken in remote mode).  Give better error texts
 	regarding -c and -s options.  Use error() instead of usage() for
 	reporting errors in all places.  Reindented some lines.  Free
 	xmalloc'd space of options.

Thu May 29 16:32:47 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
