@@ -560,7 +560,7 @@ for what in $tests; do
 	  dotest basica-0b "${testcvs} add first-dir" \
 "Directory ${TESTDIR}/cvsroot/first-dir added to the repository"
 	  cd ..
-	  rm -rf 1
+	  rm -r 1
 
 	  dotest basica-1 "${testcvs} -q co first-dir" ''
 	  cd first-dir
@@ -723,14 +723,14 @@ ${TESTDIR}/cvsroot/\./topfile,v  <--  topfile
 initial revision: 1\.1
 done"
 	  cd ..
-	  rm -rf 1
+	  rm -r 1
 	  mkdir 2; cd 2
 	  dotest basicb-0d "${testcvs} -q co -l ." "U topfile"
 	  mkdir first-dir
 	  dotest basicb-0e "${testcvs} add first-dir" \
 "Directory ${TESTDIR}/cvsroot/first-dir added to the repository"
 	  cd ..
-	  rm -rf 2
+	  rm -r 2
 
 :	  mkdir ${CVSROOT_DIRNAME}/first-dir
 	  dotest basicb-1 "${testcvs} -q co first-dir" ''
@@ -819,9 +819,9 @@ done"
 	  dotest basicb-cod-1 "${testcvs} -q co -d first-dir1 first-dir" \
 'U first-dir1/sdir1/sfile1
 U first-dir1/sdir2/sfile2'
-	  rm -rf first-dir1
+	  rm -r first-dir1
 
-	  rm -rf first-dir
+	  rm -r first-dir
 	  dotest basicb-9 \
 "${testcvs} -q co -d newdir -r release-1 first-dir/sdir1 first-dir/sdir2" \
 'U newdir/sdir1/sfile1
@@ -836,7 +836,7 @@ U newdir/sdir2/sfile2'
 "sfile1 develops
 sfile2 starts"
 
-	  rm -rf newdir
+	  rm -r newdir
 
 	  # Hmm, this might be a case for CVSNULLREPOS, but CVS doesn't
 	  # seem to deal with it...
@@ -873,7 +873,7 @@ ${TESTDIR}/cvsroot/second-dir/aa,v  <--  aa
 initial revision: 1\.1
 done"
 	  cd ../..
-	  rm -rf 1
+	  rm -r 1
 	  # Now here is the kicker: note that the semantics of -d
 	  # are fundamentally different if we specify two or more directories 
 	  # rather than one!  I consider this to be seriously bogus,
@@ -1298,7 +1298,7 @@ done"
 	    exit 0
 	  fi
 
-	  rm -rf 1
+	  rm -r 1
 	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
@@ -1390,7 +1390,7 @@ done"
 	  # CVS *will* recreate it, and we might want to make it so
 	  # that "cvs release -d" is the way to delete the directory
 	  # and have it stay gone -kingdon, Oct1996).
-	  rm -rf dir6
+	  rm -r dir6
 	  dotest deep-4b1 "${testcvs} -q update" ''
 	  dotest deep-4b2 "${testcvs} -q update -d -P" \
 'U dir6/file1
@@ -1630,7 +1630,6 @@ done"
 		fi
 
 		# now export by rtagged-by-head and rtagged-by-tag and compare.
-		rm -rf first-dir
 		if ${CVS} export -r rtagged-by-head first-dir  ; then
 			echo "PASS: test 50" >>${LOGFILE}
 		else
@@ -1651,7 +1650,7 @@ done"
 		else
 			echo "PASS: test 52" >>${LOGFILE}
 		fi
-		rm -rf 1dir first-dir
+		rm -r 1dir first-dir
 
 		# checkout by revision vs export by rtagged-by-revision and compare.
 		if ${CVS} export -rrtagged-by-revision -d export-dir first-dir  ; then
@@ -1710,9 +1709,9 @@ No conflicts created by this import"
 			echo "PASS: test 58" >>${LOGFILE}
 		fi
 
-		rm -rf second-dir
+		rm -r second-dir
 
-		rm -rf export-dir first-dir
+		rm -r export-dir first-dir
 		mkdir first-dir
 		(cd first-dir.cpy ; tar cf - . | (cd ../first-dir ; tar xf -))
 
@@ -1761,7 +1760,7 @@ No conflicts created by this import"
 #		else
 #			echo "PASS: test 63" >>${LOGFILE}
 #		fi
-		rm -rf 1dir first-dir
+		rm -r 1dir first-dir
 
 		# Test the cvs history command.
 
@@ -1885,7 +1884,7 @@ File: foo              	Status: Up-to-date
 	TRDIFF                   	(branch: 1\.1\.1)"
 
 		cd ..
-		rm -rf trdiff
+		rm -r trdiff
 
 		dotest rdiff-8 \
 		  "${testcvs} rdiff -r T1 -r local-v0 trdiff" \
@@ -1919,7 +1918,7 @@ diff -c /dev/null trdiff/new:1\.1
 #		fi
 
 		cd ..
-		rm -rf testimport
+		rm -r testimport
 		rm -rf ${CVSROOT_DIRNAME}/trdiff
 		;;
 
@@ -2231,7 +2230,7 @@ done"
 		dotest 89a "${testcvs} -q co first-dir" 'U first-dir/file1
 U first-dir/file3'
 		cd ..
-		rm -rf 2
+		rm -r 2
 		cd first-dir
 
 		# remove first file.
@@ -3079,8 +3078,10 @@ import should not expand \$''Id: imported-f2,v 1\.1\.1\.2 [0-9/]* [0-9:]* [a-z0-
 rev 2 of file 2
 [>]>>>>>> 1\.1\.1\.2'
 
-		cd .. ; rm -rf first-dir ${CVSROOT_DIRNAME}/first-dir
-		rm -rf import-dir
+		cd ..
+		rm -r first-dir
+		rm -rf ${CVSROOT_DIRNAME}/first-dir
+		rm -r import-dir
 		;;
 
 	join)
@@ -3366,7 +3367,7 @@ M file4'
 	  # revision which can be used as the source for files added
 	  # on branches.
 	  cd ../../3
-	  rm -rf first-dir
+	  rm -r first-dir
 	  dotest join-20 "${testcvs} -q co -jbranch first-dir" \
 "U first-dir/file1
 U first-dir/file2
@@ -3390,7 +3391,7 @@ R file3'
 
 	  # Checkout the main line again.
 	  cd ../../1
-	  rm -rf first-dir
+	  rm -r first-dir
 	  dotest join-22 "${testcvs} -q co first-dir" \
 'U first-dir/file2
 U first-dir/file3
@@ -3421,7 +3422,8 @@ R file3
 M file4'
 
 	  cd ../..
-	  rm -rf 1 2 3 ${CVSROOT_DIRNAME}/first-dir
+	  rm -r 1 2 3
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	new) # look for stray "no longer pertinent" messages.
@@ -3474,7 +3476,9 @@ M file4'
 			echo "PASS: test 123" >>${LOGFILE}
 		fi
 
-		cd .. ; rm -rf first-dir ; rm -rf ${CVSROOT_DIRNAME}/first-dir
+		cd ..
+		rm -r first-dir
+		rm -rf ${CVSROOT_DIRNAME}/first-dir
 		;;
 
 	newb)
@@ -3505,7 +3509,7 @@ done"
 
 	  # Check out the branch.
 	  cd ..
-	  rm -rf first-dir
+	  rm -r first-dir
 	  mkdir 1
 	  cd 1
 	  dotest newb-123e "${testcvs} -q co -r branch first-dir" \
@@ -3532,7 +3536,7 @@ done"
 	  # that the file is not pertinent, but it should not
 	  # say anything else.
 	  cd ..
-	  rm -rf first-dir
+	  rm -r first-dir
 	  dotest newb-123i "${testcvs} -q co -r branch first-dir/a" \
 "${PROG} [a-z]*: warning: first-dir/a is not (any longer) pertinent"
 
@@ -3561,7 +3565,8 @@ File: a                	Status: Needs \(Patch\|Checkout\)
 	  fi
 
 	  cd ../..
-	  rm -rf 1 2 ; rm -rf ${CVSROOT_DIRNAME}/first-dir
+	  rm -r 1 2
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	conflicts)
@@ -3801,7 +3806,7 @@ File: a                	Status: Up-to-date
 		  echo 'FAIL: test 142' | tee -a ${LOGFILE}
 		fi
 		cd ../..
-		rm -rf 1 2 3 ; rm -rf ${CVSROOT_DIRNAME}/first-dir
+		rm -r 1 2 3 ; rm -rf ${CVSROOT_DIRNAME}/first-dir
 		;;
 
 	conflicts2)
@@ -3921,7 +3926,7 @@ C aa\.c"
 	  fi
 	  cd ../..
 
-	  rm -rf 1 2 ; rm -rf ${CVSROOT_DIRNAME}/first-dir
+	  rm -r 1 2 ; rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	modules)
@@ -4095,7 +4100,7 @@ realmodule   NONE        first-dir/subdir a'
 	  else
 	    echo 'PASS: test 150g2' >>${LOGFILE}
 	  fi
-	  rm -rf dirmodule
+	  rm -r dirmodule
 
 	  # Now test that a module using -d checks out to the specified
 	  # directory.
@@ -4147,7 +4152,7 @@ U nameddir/b'
 	  fi
 
 	  cd ..
-	  rm -rf 1
+	  rm -r 1
 
 	  mkdir 2
 	  cd 2
@@ -4161,7 +4166,7 @@ U nameddir/b'
 "CVS
 first-dir"
 	  cd ..
-	  rm -rf 2
+	  rm -r 2
 
 	  # Test checking out everything.
 	  mkdir 1
@@ -4171,7 +4176,7 @@ first-dir"
 U first-dir/subdir/a
 U first-dir/subdir/b"
 	  cd ..
-	  rm -rf 1
+	  rm -r 1
 
 	  # Test checking out a module which lists at least two
 	  # specific files twice.  At one time, this failed over
@@ -4204,13 +4209,13 @@ initial revision: 1\.1
 done"
 
 	  cd ..
-	  rm -rf first-dir
+	  rm -r first-dir
 	  dotest modules-155c4 "${testcvs} -q co topfiles" \
 "U first-dir/file1
 U first-dir/file2"
 	  dotest modules-155c5 "${testcvs} -q co topfiles" ""
 	  cd ..
-	  rm -rf 1
+	  rm -r 1
 
 	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
@@ -4275,9 +4280,9 @@ ${PROG} [a-z]*: Rebuilding administrative file database"
 ${PROG} \[[a-z]* aborted\]: cannot expand modules"
 
 	  # Clean up.
-	  rm -rf CVSROOT
+	  rm -r CVSROOT
 	  cd ..
-	  rm -rf 1
+	  rm -r 1
 	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  rm -rf ${CVSROOT_DIRNAME}/second-dir
 	  ;;
@@ -4328,7 +4333,7 @@ ${PROG} [a-z]*: Rebuilding administrative file database"
 	  cd ..
 
 	  dotest modules3-6 "${testcvs} -q co bigmod" ''
-	  rm -rf first-dir
+	  rm -r first-dir
 	  dotest modules3-7 "${testcvs} -q co bigmod" 'U first-dir/file1'
 	  cd ..
 	  rm -r 1
@@ -4487,7 +4492,7 @@ done"
 	      exit 1
 	    fi
 	    # Test handling of -m during ci
-	    cd ..; rm -rf a-dir;
+	    cd ..; rm -r a-dir
 	    if ${testcvs} co a-dir >>${LOGFILE} 2>&1; then
 	      echo 'PASS: test 158' >>${LOGFILE}
 	    else
@@ -4517,7 +4522,9 @@ done"
 	      exit 1
 	    fi
 	    # Clean up
-	    cd ..; rm -rf a-dir ${CVSROOT_DIRNAME}/a-dir
+	    cd ..
+	    rm -r a-dir
+	    rm -rf ${CVSROOT_DIRNAME}/a-dir
 	  done
 	  ;;
 	errmsg1)
@@ -4589,7 +4596,8 @@ EOF
 	  cd ..
 	  chmod u+w 1dir
 	  cd ..
-	  rm -rf 1 2 ${CVSROOT_DIRNAME}/1dir
+	  rm -r 1 2
+	  rm -rf ${CVSROOT_DIRNAME}/1dir
 	  ;;
 
 	devcom)
@@ -4787,6 +4795,7 @@ T abc'
 	  dotest devcom-t1 "${testcvs} -q co -rtag first-dir/abb" \
 'U first-dir/abb'
 	  cd ..
+	  # Since first-dir/abb is readonly, use -f.
 	  rm -rf 3
 
 	  # Now remove all the file attributes
@@ -4812,7 +4821,9 @@ U first-dir/abc'
 	    exit 0
 	  fi
 
-	  rm -rf 1 2 3 ${CVSROOT_DIRNAME}/first-dir
+	  # Use -f because of the readonly files.
+	  rm -rf 1 2 3
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	devcom2)
@@ -4863,7 +4874,9 @@ U first-dir/w3'
 	  dotest_fail devcom2-11 "test -w first-dir/w3" ''
 	  cd ..
 
-	  rm -rf 1 2 ${CVSROOT_DIRNAME}/first-dir
+	  # Use -f because of the readonly files.
+	  rm -rf 1 2
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	devcom3)
@@ -4918,7 +4931,9 @@ G@#..!@#=&"
 
 	  cd ../..
 
-	  rm -rf 1 ${CVSROOT_DIRNAME}/first-dir
+	  # Use -f because of the readonly files.
+	  rm -rf 1
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	ignore)
@@ -4982,7 +4997,7 @@ N second-dir/optig.c
 
 No conflicts created by this import'
 	  cd ..
-	  rm -rf dir-to-import
+	  rm -r dir-to-import
 
 	  mkdir 1
 	  cd 1
@@ -5075,7 +5090,7 @@ Are you sure you want to release (and delete) directory .first-dir': "
 You have \[1\] altered files in this repository.
 Are you sure you want to release (and delete) directory .second-dir': "
 	  cd ..
-	  rm -rf 1
+	  rm -r 1
 	  rm ${TESTDIR}/ignore.tmp
 	  rm -rf ${CVSROOT_DIRNAME}/first-dir ${CVSROOT_DIRNAME}/second-dir
 	  ;;
@@ -5136,7 +5151,7 @@ File: binfile          	Status: Up-to-date
    Sticky Date:		(none)
    Sticky Options:	-kb"
 	  cd ../..
-	  rm -rf 3
+	  rm -r 3
 	  cd 2/first-dir
 
 	  cp ../../1/binfile2.dat binfile
@@ -5186,7 +5201,7 @@ done"
 	  fi
 
 	  cd ../..
-	  rm -rf 1
+	  rm -r 1
 
 	  mkdir 3
 	  cd 3
@@ -5203,7 +5218,7 @@ File: binfile          	Status: Up-to-date
    Sticky Date:		(none)
    Sticky Options:	-kb"
 	  cd ../..
-	  rm -rf 3
+	  rm -r 3
 
 	  cd 2/first-dir
 	  echo 'this file is $''RCSfile$' >binfile
@@ -5354,7 +5369,7 @@ done"
 	    fail binwrap-1
 	  fi
 	  cd ..
-	  rm -rf dir-to-import
+	  rm -r dir-to-import
 	  dotest binwrap-2 "${testcvs} -q co first-dir" 'U first-dir/foo.c
 U first-dir/foo.exe'
 	  dotest binwrap-3 "${testcvs} -q status first-dir" \
@@ -5375,7 +5390,8 @@ File: foo\.exe          	Status: Up-to-date
    Sticky Tag:		(none)
    Sticky Date:		(none)
    Sticky Options:	-kb"
-	  rm -rf first-dir ${CVSROOT_DIRNAME}/first-dir
+	  rm -r first-dir
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	mwrap)
@@ -5644,7 +5660,8 @@ done"
 U file1'
 
 	  cd ../..
-	  rm -rf 1 2 ${CVSROOT_DIRNAME}/first-dir
+	  rm -r 1 2
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	log)
@@ -5870,7 +5887,8 @@ ${log_rev1}
 ${log_trailer}"
 
 	  cd ..
-	  rm -rf first-dir ${CVSROOT_DIRNAME}/first-dir
+	  rm -r first-dir
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	log2)
@@ -5913,7 +5931,8 @@ date: [0-9/]* [0-9:]*;  author: ${username};  state: Exp;
 ============================================================================="
 
 	  cd ..
-	  rm -rf first-dir ${CVSROOT_DIRNAME}/first-dir
+	  rm -r first-dir
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 
 	  fi # end of tests skipped for remote
 
@@ -5959,7 +5978,7 @@ ${testcvs} -d ${TESTDIR}/crerepos release -d CVSROOT >>${LOGFILE}; then
 	    else
 	      fail crerepos-5
 	    fi
-	    rm -rf CVS
+	    rm -r CVS
 	    cd ..
 	    # The directory tmp should be empty
 	    dotest crerepos-6 "rmdir tmp" ''
@@ -5978,13 +5997,13 @@ ${testcvs} -d ${TESTDIR}/crerepos release -d CVSROOT >>${LOGFILE}; then
 	    dotest_fail crerepos-6a "${testcvs} -q -d ../crerepos get ." \
 "${PROG} \[[a-z]* aborted\]: CVSROOT ../crerepos must be an absolute pathname"
 	    cd ..
-	    rm -rf 1
+	    rm -r 1
 
 	    mkdir 1; cd 1
 	    dotest_fail crerepos-6b "${testcvs} -d crerepos init" \
 "${PROG} \[[a-z]* aborted\]: CVSROOT crerepos must be an absolute pathname"
 	    cd ..
-	    rm -rf 1
+	    rm -r 1
 	  else # remote
 	    # Test that CVS rejects a relative path in CVSROOT.
 	    mkdir 1; cd 1
@@ -5992,14 +6011,14 @@ ${testcvs} -d ${TESTDIR}/crerepos release -d CVSROOT >>${LOGFILE}; then
 "${testcvs} -q -d :ext:`hostname`:../crerepos get ." \
 "Root ../crerepos must be an absolute pathname"
 	    cd ..
-	    rm -rf 1
+	    rm -r 1
 
 	    mkdir 1; cd 1
 	    dotest_fail crerepos-6b \
 "${testcvs} -d :ext:`hostname`:crerepos init" \
 "Root crerepos must be an absolute pathname"
 	    cd ..
-	    rm -rf 1
+	    rm -r 1
 	  fi # end of tests to be skipped for remote
 
 	  # CVS better not create a history file--if the administrator 
@@ -6181,8 +6200,10 @@ add file1
 	  else
 	    fail rcs-4
 	  fi
+	  cd ..
 
-	  rm -rf first-dir ${CVSROOT_DIRNAME}/first-dir ${TESTDIR}/rcs4.tmp
+	  rm -r first-dir ${TESTDIR}/rcs4.tmp
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	big)
@@ -6219,7 +6240,7 @@ ${TESTDIR}/cvsroot/first-dir/file1,v  <--  file1
 initial revision: 1\.1
 done"
 	  cd ..
-	  rm -rf first-dir
+	  rm -r first-dir
 	  dotest big-4 "${testcvs} -q get first-dir" "U first-dir/file1"
 
 	  if test "$keep" = yes; then
@@ -6227,7 +6248,7 @@ done"
 	    exit 0
 	  fi
 
-	  rm -rf first-dir
+	  rm -r first-dir
 	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
@@ -6349,19 +6370,14 @@ done"
 	  fi
 
 	  cd ../..
-	  rm -rf 1 ${CVSROOT_DIRNAME}/first-dir
+	  rm -r 1
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  # Perhaps should restore the umask and CVSUMASK.  But the other
 	  # tests "should" not care about them...
 	  ;;
 
 	stamps)
 	  # Test timestamps.
-	  # This should not be necessary.  I'm putting it here to work
-	  # around the fact that some other test apparently is not ending
-	  # in the correct directory.  I don't know of any quick way to
-	  # track down which test.  If tests ended with "rm -r 1" instead
-	  # of "rm -rf 1" that would help a lot.
-	  cd ${TESTDIR}
 	  mkdir 1; cd 1
 	  dotest stamps-1 "${testcvs} -q co -l ." ''
 	  mkdir first-dir
@@ -6542,7 +6558,8 @@ ${QUESTION} file2" "${QUESTION} file2
 ${PROG} [a-z]*: use .cvs commit. to add this file permanently"
 
 	  cd ../..
-	  rm -rf 1 ${CVSROOT_DIRNAME}/first-dir
+	  rm -r 1
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	keyword)
@@ -6713,7 +6730,7 @@ xx "'\$'"Log"'\$'
 	  # This workaround should be removed when the bug is fixed.
 	  if test "x$remote" = "xyes"; then
 	    cd ..
-	    rm -rf first-dir
+	    rm -r first-dir
 	    dotest keyword-17 "${testcvs} -q co first-dir" "U first-dir/file1"
 	    cd first-dir
 	  else
@@ -6779,7 +6796,8 @@ xx
 change"
 
 	  cd ../..
-	  rm -rf 1 ${CVSROOT_DIRNAME}/first-dir
+	  rm -r 1
+	  rm -rf ${CVSROOT_DIRNAME}/first-dir
 	  ;;
 
 	toplevel)
@@ -6805,7 +6823,7 @@ initial revision: 1\.1
 done"
 
 	  cd ../..
-	  rm -rf 1; mkdir 1; cd 1
+	  rm -r 1; mkdir 1; cd 1
 	  dotest toplevel-5 "${testcvs} co top-dir" \
 "${PROG} [a-z]*: Updating top-dir
 U top-dir/file1"
@@ -6847,9 +6865,8 @@ U file1
 ${PROG} [a-z]*: Updating top-dir"
 
 	  cd ..
-	  rm -rf 1
+	  rm -r 1
 	  ;;
-	  
 
 	*)
 	   echo $what is not the name of a test -- ignored
